VirtualDub2.1 change log

2.4.2.x dev
----------------------
Cosmetic changes.


2.4.1.930 - 2025-10-02
----------------------
Settings are now stored in HKEY_CURRENT_USER\SOFTWARE\VirtualDub2\VirtualDub.
Saving of some settings has been reworked.
The "Display" settings panel has been redesigned.
Fixed crash of 64-bit version when using highpass, lowpass audio filters.
Code refactoring for modern compilers.
Cosmetic changes.

Updated avlib-1.vdplugin to version 1.0.1.393.
    The FFmpeg 8.0 x64 build from BtbN is used.
    The FFmpeg 8.0 win32 build from Defisym is used.
    Added saving and reading of encoder settings from the registry.
    Added hardware video encoders NVENC, QSV, AMF for H.264 and HEVC.
    Added hardware video encoders NVENC, AMF for AV1.
    FFV1 version 0 video encoding is no longer supported.
    Adjusted profile selection for ProRes encoder.
    Allowed opening AviSynth scripts.
    Cosmetic changes.


2.3.0.845 - 2025-04-16
----------------------
VirtualDub2 is now a Unicode application.
Improved support for file paths with Unicode characters.
Removed obsolete "Disk I/O write mode" setting.
The "/queryVersion" parameter has been deprecated.
Updated zlib 1.3.1.

Updated avlib-1.vdplugin to version 0.7.1.264.
    FFmpeg 7.1.1 is now supported.
    Fixed crash on problematic AAC audio.
    Fixed missing sound for some MP4 files with AAC audio.
    Fixed a crash when playing video files with changing video frame size.
    Ignore m3u playlist files.
    Fixed frame retrieval for some HEVC streams.
    Added video encoder SVT-AV1.
    Minor optimizations.

Updated scripted.vdplugin to version 0.2.2.100.
    Scintilla 5.5.6 updated.
    Lexilla 5.4.4 updated.


2.2.0.755 - 2025-02-03
----------------------
The auxsetup utility now has two versions: for win32 and x64.
Removed "64" prefixes for exe and dll files.
Improved HiDPI support.
Fixed output of system messages in vdub2.exe.
Code refactoring for modern compilers.
