@@ -48,6 +48,8 @@ VDStringA VDTextWToU8(const wchar_t *s, int length);
 VDStringW VDTextU8ToW(const VDStringA& s);
 VDStringW VDTextU8ToW(const char *s, int length);
 
+VDStringW VDTextLinesU8orAToW(const char* s, int length);
+
 // The terminating NULL character is not included in these.
 
 int VDTextWToALength(const wchar_t *s, int length=-1);
